--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "gyx-pushercoins",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "pusher": "^2.2.2",
+    "pusher-js": "^5.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "node server.js",
+    "start:client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
